--- a/.env.example
+++ b/.env.example
@@ -15,8 +15,21 @@ CDN_DOMAIN=nginx.example.com
 # 是否启用预热功能（true/false）
 PREHEAT_ENABLED=false
 
-# 最大预热文件大小（MB）
-MAX_FILE_SIZE_MB=50000
-
 # 每批预热的 URL 数量
 PREHEAT_BATCH_SIZE=10
+
+# Telegram Bot 审核配置
+TELEGRAM_REVIEW_ENABLED=true
+TELEGRAM_BOT_TOKEN=your_bot_token_here
+TELEGRAM_ADMIN_CHAT_IDS=123456789,987654321
+
+# 审核超时时间（秒），默认 24 小时
+REVIEW_TIMEOUT_SECONDS=86400
+
+# 如果未启用 Telegram 审核，是否自动批准所有预热请求
+AUTO_APPROVE_IF_NO_REVIEW=false
+
+# 智能 URL 匹配配置（用于单体 Emby 部署）
+ENABLE_SMART_URL_MATCHING=true
+SMART_MATCH_KEYWORDS=剧集,电影
+SMART_MATCH_CDN_BASE=https://your-cdn-domain.com/
