实现 Telegram 批量推送功能，优化审核请求处理，更新相关配置和文档

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -9,7 +9,7 @@ on:
 
 env:
   # 这里已经修改为你截图中的仓库名
-  IMAGE_NAME: tdck/emby-cdn-preheat
+  IMAGE_NAME: tdck/emby-cdn-preheat:v1.0.0
 
 jobs:
   build-and-push:
