--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,11 @@ services:
       - REVIEW_TIMEOUT_SECONDS=${REVIEW_TIMEOUT_SECONDS:-86400}
       - AUTO_APPROVE_IF_NO_REVIEW=${AUTO_APPROVE_IF_NO_REVIEW:-false}
 
+      # Telegram 批量推送配置（避免触发速率限制）
+      - BATCH_PUSH_INTERVAL=${BATCH_PUSH_INTERVAL:-30}
+      - BATCH_PUSH_SIZE=${BATCH_PUSH_SIZE:-10}
+      - MAX_ITEMS_PER_MESSAGE=${MAX_ITEMS_PER_MESSAGE:-5}
+
       # 智能 URL 匹配配置（用于单体 Emby 部署）
       - ENABLE_SMART_URL_MATCHING=${ENABLE_SMART_URL_MATCHING:-true}
       - SMART_MATCH_KEYWORDS=${SMART_MATCH_KEYWORDS:-剧集,电影}
