--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -8,8 +8,8 @@ on:
     branches: [ "main" ]    # PR 时只构建测试
 
 env:
-  # 这里已经修改为你截图中的仓库名
-  IMAGE_NAME: tdck/emby-cdn-preheat:v1.0.0
+  # Docker Hub 仓库名（不包含标签）
+  IMAGE_NAME: tdck/emby-cdn-preheat
 
 jobs:
   build-and-push:
@@ -23,11 +23,15 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 2. 设置 Docker Buildx (构建工具，支持缓存)
+      # 2. 设置 QEMU (多架构支持)
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      # 3. 设置 Docker Buildx (构建工具，支持缓存)
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      # 3. 登录 Docker Hub
+      # 4. 登录 Docker Hub
       - name: Log into Docker Hub
         if: github.event_name != 'pull_request'
         uses: docker/login-action@v3
@@ -36,7 +40,7 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # 4. 提取元数据 (自动处理 tags: latest 和 vX.X.X)
+      # 5. 提取元数据 (自动处理 tags: latest 和 vX.X.X)
       - name: Extract Docker metadata
         id: meta
         uses: docker/metadata-action@v5
@@ -45,8 +49,11 @@ jobs:
           tags: |
             type=raw,value=latest,enable={{is_default_branch}}
             type=ref,event=tag
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=sha,prefix={{branch}}-
 
-      # 5. 构建并推送
+      # 6. 构建并推送
       - name: Build and push Docker image
         id: build-and-push
         uses: docker/build-push-action@v5
@@ -56,8 +63,30 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          # 指定只构建 amd64 平台
-          platforms: linux/amd64
+          # 多架构支持 (amd64 和 arm64)
+          platforms: linux/amd64,linux/arm64
           # 使用 GitHub Actions 缓存加速构建
           cache-from: type=gha
           cache-to: type=gha,mode=max
+
+      # 7. 生成构建摘要
+      - name: Generate build summary
+        if: always()
+        run: |
+          echo "## Docker Build Summary 🐳" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "**Image Name:** \`${{ env.IMAGE_NAME }}\`" >> $GITHUB_STEP_SUMMARY
+          echo "**Tags:** " >> $GITHUB_STEP_SUMMARY
+          echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
+          echo "${{ steps.meta.outputs.tags }}" >> $GITHUB_STEP_SUMMARY
+          echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
+          echo "**Platforms:** \`linux/amd64, linux/arm64\`" >> $GITHUB_STEP_SUMMARY
+          if [ "${{ steps.build-and-push.outputs.digest }}" != "" ]; then
+            echo "**Digest:** \`${{ steps.build-and-push.outputs.digest }}\`" >> $GITHUB_STEP_SUMMARY
+          fi
+          echo "" >> $GITHUB_STEP_SUMMARY
+          if [ "${{ github.event_name }}" != "pull_request" ]; then
+            echo "✅ Image pushed to Docker Hub successfully!" >> $GITHUB_STEP_SUMMARY
+          else
+            echo "ℹ️ PR build - image not pushed" >> $GITHUB_STEP_SUMMARY
+          fi
