feat: Enhance Docker setup and add initialization scripts
- Updated Dockerfile to include entrypoint script for directory setup and permissions.
- Added QUICKSTART.md for simplified deployment instructions.
- Enhanced README.md with quick start guide and deployment options.
- Introduced backup.sh for backing up database and configuration files.
- Modified database.py to ensure database directory exists and improved error handling.
- Updated docker-compose.yml to use environment variable for database file path.
- Created entrypoint.sh for initializing necessary directories and starting the application.
- Added fix-permissions.sh for quick permission fixes on data and logs directories.
- Implemented init.sh for comprehensive project initialization and environment checks.
- Added test_database.py for testing database connection and initialization.

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,9 @@ SERVER_PORT=8899
 # 日志级别 (DEBUG, INFO, WARNING, ERROR)
 LOG_LEVEL=INFO
 
+# 数据库文件路径（相对于工作目录）
+DB_FILE=data/preheat_review.db
+
 # 腾讯云 API 凭证（后续添加预热功能时需要）
 TENCENT_SECRET_ID=your_secret_id_here
 TENCENT_SECRET_KEY=your_secret_key_here
