feat: 新增路径黑名单功能，支持跳过特定媒体预热

--- a/.env.example
+++ b/.env.example
@@ -46,3 +46,7 @@ MAX_ITEMS_PER_MESSAGE=5
 ENABLE_SMART_URL_MATCHING=true
 SMART_MATCH_KEYWORDS=剧集,电影
 SMART_MATCH_CDN_BASE=https://your-cdn-domain.com/
+
+# 不预热路径黑名单（可选，用逗号分隔多个路径）
+# 示例：PREHEAT_BLACKLIST_PATHS=/media/近期添加/,/media/test/
+PREHEAT_BLACKLIST_PATHS=
